src/components/Resume/Resume.module.scss
@import '../../common/styles/variables';

.resumeBlock {
  background-color: var(#{--bgSecondaryDefault});
  color: var(#{--textDefault});

  .wrapper {
    height: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: flex-start;
    padding: 100px 0;

    .title {
      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;

      h2 {
        font-size: 40px;
        margin: 15px 0 48px;
      }

      h3 {
        background-color: #f5df4f;
        color: #000000;
        padding: 0 8px;
        font-weight: lighter;
        font-size: 15px;
      }
    }

    .resumes {
      width: 100%;
      display: flex;
      justify-content: flex-start;
      gap: 20px;

      h2 {
        font-size: 28px;
        margin-bottom: 32px;
      }

      .education, .experience {
        flex-basis: 50%;

        .educationInfo, .experienceInfo {
          padding: 0 0 0 16px;
          border-left: 2px solid $primaryColor;

          h3 {
            font-size: 21px;
          }

          h4 {
            margin-top: 8px;
            font-size: 18px;
            font-weight: normal;
          }

          p {
            margin-top: 8px;
            font-size: 16px;
            line-height: 29px;
            color: var(#{--textSecondaryDefault});
          }

          hr {
            opacity: 0.1;
            margin-bottom: 1.5rem!important;
            margin-top: 1.5rem!important;
          }
        }
      }

      @media screen and (max-width: 992px) {
        padding: 15px;
        flex-direction: column;
      }
    }

    @media screen and (max-width: 575px) {
      padding: 50px 0;
    }
  }
}

